# trade_alert

./: AGENT_REVIEW.md  CONFIG_DEFAULTS.md  MVP_SCOPE.md  OPEN_QUESTIONS.md  PRD.md  README.md  SYSTEM_OVERVIEW.md
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  render.yaml  scan_runner.py  start.sh  stream_scanner.py  test_agent_review.py
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  review_store.py  tradingagents_reviewer.py
backend/app/alerts/: action_execution.py  action_resolution.py  adjustment_sessions.py  alert_emission.py  approval_workflow.py  delivery_state.py  http_telegram_transport.py  models.py  telegram_renderer.py  telegram_runtime.py  telegram_transport.py
backend/app/api/: __init__.py  dashboard_auth.py  dashboard_models.py  dashboard_routes.py  dashboard_runtime.py  telegram_adjustments.py  telegram_callbacks.py  telegram_routes.py
backend/app/audit/: lifecycle_log.py  models.py  pnl_summary.py  review_models.py  review_service.py  trade_review.py
backend/app/dashboard/: __init__.py  alerted_setups_state.py  renderers.py  scanner_dashboard.py  scanner_state.py
backend/app/ingest/: __init__.py  market_ingestor.py  news_ingestor.py
backend/app/intelligence/: __init__.py  adaptive_scorer.py  models.py  outcome_store.py  sentiment_analyzer.py
backend/app/ops/: __init__.py  alert_delivery_health.py  degraded_state.py  health_models.py  incident_log.py  monitoring_models.py  overview_service.py  provider_health.py  system_events.py
backend/app/paper/: broker.py  (+2 more)
backend/tests/: conftest.py
(+205 files in other folders)
